# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = pyvisco/_version.py
versionfile_build = pyvisco/_version.py
tag_prefix = ''
parentdir_prefix = pyvisco-

[metadata]
description-file = README.md

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[tool:pytest]
addopts = --verbose